Start of Implementing TMDb API integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Name of Web Application
 spring.application.name=nextwatch
+
+# TMDb Api Key
+tmdb.api.key = xxxxxxxxxxx
+
+# Database Configuration - TODO
+
+# Logging level configuration
+logging.level.org.springframework = INFO
