Refactor package structure to com.nextwatch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=nextwatch
 
 # TMDb Api Key
-tmdb.api.key = xxxxxxxxxxx
+tmdb.api.key = XXXXXXXXXXXXXXXXXXXXXXXX
 
 # Database Configuration - TODO
 
